--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <body>
         <h1>Microsoft Software Download Listing</h1>
 
-        <a href="https://github.com/eraseyourknees/msdl">
-            <b>Source code on GitHub</b>
+        <a href="https://github.com/msdn-mcdd/msdn-mcdd.github.io">
+            <b>看看源代码吧</b>
         </a>
 
         <noscript>
