第二次升级中文

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <title>Microsoft Software Download Listing</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
-        <link rel="stylesheet" href="css/style.css">
-        <script defer src="js/msdl.js"></script>
+        <link rel="stylesheet" href="https://msdn-mcdd.github.io/css/style.css">
+        <script defer src="https://msdn-mcdd.github.io/js/msdl.js"></script>
     </head>
     <body>
         <h1>Microsoft Software Download Listing</h1>
